[gd_scene load_steps=35 format=2]

[ext_resource path="res://gui/lives.png" type="Texture" id=1]
[ext_resource path="res://gui/white.png" type="Texture" id=2]
[ext_resource path="res://gui/emptyHealth.png" type="Texture" id=3]
[ext_resource path="res://gui/fullHealth.png" type="Texture" id=4]
[ext_resource path="res://font/PressStart2P-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://gui/emptyBossHealth.png" type="Texture" id=6]
[ext_resource path="res://gui/bossHealth.png" type="Texture" id=7]
[ext_resource path="res://gui/gui.gd" type="Script" id=8]
[ext_resource path="res://gui/dialog.png" type="Texture" id=9]
[ext_resource path="res://gui/pons.png" type="Texture" id=10]
[ext_resource path="res://gui/DebugMode.gd" type="Script" id=11]
[ext_resource path="res://player/regular/walk.png" type="Texture" id=12]
[ext_resource path="res://gui/PaletteFilter.gd" type="Script" id=13]
[ext_resource path="res://gui/gui_font.tres" type="DynamicFont" id=14]
[ext_resource path="res://common/Resources/black.png" type="Texture" id=15]
[ext_resource path="res://gui/UnlockPaletteBox.gd" type="Script" id=16]
[ext_resource path="res://gui/box.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Cover:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Player/EnergyText:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Pons:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player/LivesHat:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Player/Energy:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Player:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 256 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Player:rect_size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 320, 32 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DialogBox/Dialog:custom_fonts/font:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("DialogBox:margin_top")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -64.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Player/BossArea/BossEnergy:rect_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Player/EnergyText:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Pons:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player/LivesHat:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Player/Energy:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Player:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 320, 28 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Player:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 260 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DialogBox:margin_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -56.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("DialogBox/Dialog:custom_fonts/font:size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Player/BossArea/BossEnergy:rect_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Player/EnergyText:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Player/Pons:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Player/LivesHat:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Player/Energy:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Player:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 320, 24 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Player:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 264 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("DialogBox:margin_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -48.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("DialogBox/Dialog:custom_fonts/font:size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Player/BossArea/BossEnergy:rect_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 5 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 17, 26 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 12 )
region = Rect2( 17, 0, 17, 26 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 12 )
region = Rect2( 34, 0, 17, 26 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

// Which color you want to change
uniform vec4 game_white : hint_color;
uniform vec4 game_light : hint_color;
uniform vec4 game_dark : hint_color;
uniform vec4 game_black : hint_color;

uniform vec4 palette_white : hint_color;
uniform vec4 palette_light : hint_color;
uniform vec4 palette_dark : hint_color;
uniform vec4 palette_black : hint_color;

uniform int brightness_level;
uniform float epsilon;

int get_level_from_game_color(vec3 color) {
	if (abs(length(color)-length(game_white.rgb)) <= abs(length(color)-length(game_light.rgb)))
		return 3;
	if (abs(length(color)-length(game_light.rgb)) <= abs(length(color)-length(game_dark.rgb)))
		return 2;
	if (abs(length(color)-length(game_dark.rgb)) <= abs(length(color)-length(game_black.rgb)))
		return 1;
	return 0;
}

vec4 get_palette_color(int level) {
	if (level >= 3)
		return palette_white;
	if (level == 2)
		return palette_light;
	if (level == 1)
		return palette_dark;
	if (level <= 0)
		return palette_black;
	return game_black;
}

void fragment() {
	vec3 c = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0).rgb;
	int level = get_level_from_game_color(c);
	COLOR.rgb = get_palette_color(level+brightness_level).rgb;
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/game_white = Color( 1, 1, 1, 1 )
shader_param/game_light = Color( 0.67451, 0.682353, 0.67451, 1 )
shader_param/game_dark = Color( 0.345098, 0.352941, 0.345098, 1 )
shader_param/game_black = Color( 0, 0, 0, 1 )
shader_param/palette_white = Color( 1, 1, 1, 1 )
shader_param/palette_light = Color( 0.67451, 0.682353, 0.67451, 1 )
shader_param/palette_dark = Color( 0.345098, 0.352941, 0.345098, 1 )
shader_param/palette_black = Color( 0, 0, 0, 1 )
shader_param/brightness_level = 0
shader_param/epsilon = 0.16

[sub_resource type="ShaderMaterial" id=17]
render_priority = 1
shader = SubResource( 10 )
shader_param/game_white = Color( 1, 1, 1, 1 )
shader_param/game_light = Color( 0.67451, 0.682353, 0.67451, 1 )
shader_param/game_dark = Color( 0.345098, 0.352941, 0.345098, 1 )
shader_param/game_black = Color( 0, 0, 0, 1 )
shader_param/palette_white = Color( 1, 1, 1, 1 )
shader_param/palette_light = Color( 0.67451, 0.682353, 0.67451, 1 )
shader_param/palette_dark = Color( 0.345098, 0.352941, 0.345098, 1 )
shader_param/palette_black = Color( 0, 0, 0, 1 )
shader_param/brightness_level = 0
shader_param/epsilon = 0.16

[node name="Gui" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 8 )

[node name="Name2" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DEBUG MODE ON"
align = 2
uppercase = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyText" type="Label" parent="Player"]
anchor_left = 0.334
anchor_top = 0.25
anchor_right = 0.334
anchor_bottom = 0.25
margin_left = -66.88
margin_top = -4.0
margin_right = 67.12
margin_bottom = 12.0
grow_horizontal = 2
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HAT KID :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="TextureProgress" parent="Player"]
anchor_left = 0.334
anchor_top = 0.25
anchor_right = 0.334
anchor_bottom = 0.25
margin_left = 0.119995
margin_top = -3.0
margin_right = 31.12
margin_bottom = 3.0
rect_pivot_offset = Vector2( 0, 2 )
max_value = 4.0
value = 4.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_top = 1
stretch_margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StageName" type="Label" parent="Player"]
anchor_left = 0.8
anchor_top = 0.25
anchor_right = 0.8
anchor_bottom = 0.25
margin_left = -1.0
margin_top = -4.0
margin_right = 63.0
margin_bottom = 12.0
grow_horizontal = 2
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LV.1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesHat" type="TextureRect" parent="Player"]
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 3.0
margin_right = 15.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 13, 4 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LiveNum" type="Label" parent="Player"]
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 3.0
margin_right = 39.0
margin_bottom = 11.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pons" type="TextureRect" parent="Player"]
anchor_left = 0.606
anchor_top = 0.083
anchor_right = 0.606
anchor_bottom = 0.083
margin_left = -7.92
margin_top = 0.0079999
margin_right = 8.08
margin_bottom = 8.008
grow_horizontal = 0
rect_pivot_offset = Vector2( 0, 2 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PonsNum" type="Label" parent="Player"]
anchor_left = 0.6
anchor_top = 0.333
anchor_right = 0.6
anchor_bottom = 0.333
margin_left = -24.0
margin_top = -3.992
margin_right = 56.0
margin_bottom = 20.008
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, -4 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "    0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreArea" type="Control" parent="Player"]
anchor_left = 0.112
anchor_top = 0.5
anchor_right = 0.112
anchor_bottom = 1.0
margin_left = 15.16
margin_right = 15.16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplicity" type="Label" parent="Player/ScoreArea"]
visible = false
anchor_left = 0.2
anchor_right = 0.2
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 2.0
margin_right = 78.0
margin_bottom = 14.0
grow_horizontal = 2
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 4, 0 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "x5:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Player/ScoreArea"]
margin_left = -40.0
margin_top = 2.0
margin_right = 152.0
margin_bottom = 26.0
grow_horizontal = 2
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SCORE   :"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNum" type="Label" parent="Player/ScoreArea"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 56.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 6.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "000000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossArea" type="Control" parent="Player"]
visible = false
anchor_left = 0.112
anchor_top = 0.5
anchor_right = 0.112
anchor_bottom = 1.0
margin_left = 0.16
margin_top = 9.53674e-07
margin_right = 0.16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossEnergyText" type="Label" parent="Player/BossArea"]
margin_left = 31.0
margin_top = 2.0
margin_right = 111.0
margin_bottom = 18.0
grow_horizontal = 2
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BOSS:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossEnergy" type="TextureProgress" parent="Player/BossArea"]
margin_left = 71.0
margin_top = 3.0
margin_right = 119.0
margin_bottom = 9.00001
rect_pivot_offset = Vector2( 0, 2 )
max_value = 6.0
value = 6.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="NinePatchRect" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
texture = ExtResource( 9 )
patch_margin_left = 233
patch_margin_top = 20
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="DialogBox"]
anchor_left = 0.05
anchor_right = 0.525
anchor_bottom = 0.333
margin_bottom = 0.0159998
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Timmy"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="Label" parent="DialogBox"]
anchor_left = 0.05
anchor_top = 0.333
anchor_right = 0.975
anchor_bottom = 0.865
margin_top = 0.0159998
margin_right = 296.0
margin_bottom = 25.48
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Are you looking for your umbrella? I saw it land near the market area when you, you know..."
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoverAnimator" type="AnimationPlayer" parent="."]
anims/cover = SubResource( 3 )
"anims/cover (instant)" = SubResource( 4 )
anims/reveal = SubResource( 5 )
"anims/reveal (instant)" = SubResource( 6 )

[node name="Cover" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/large = SubResource( 7 )
anims/medium = SubResource( 8 )
anims/regular = SubResource( 9 )

[node name="UnlockPaletteBox" type="NinePatchRect" parent="."]
pause_mode = 2
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -224.0
margin_right = -24.0
margin_bottom = -80.0
focus_mode = 2
texture = ExtResource( 17 )
patch_margin_left = 233
patch_margin_top = 20
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="Label" parent="UnlockPaletteBox"]
anchor_left = 0.05
anchor_top = 0.333
anchor_right = 0.975
anchor_bottom = 0.865
margin_left = -5.6
margin_top = -23.952
margin_right = 255.8
margin_bottom = -36.56
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "New Palette Unlocked!"
align = 1
valign = 1
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaletteName" type="Label" parent="UnlockPaletteBox"]
anchor_left = 0.05
anchor_top = 0.333
anchor_right = 0.975
anchor_bottom = 0.865
margin_left = -5.6
margin_top = 8.048
margin_right = 255.8
margin_bottom = -20.56
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Classic"
align = 1
valign = 1
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToContinue" type="Label" parent="UnlockPaletteBox"]
anchor_left = 0.05
anchor_top = 0.333
anchor_right = 0.975
anchor_bottom = 0.865
margin_left = -5.6
margin_top = 64.048
margin_right = 255.8
margin_bottom = 35.44
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Use your new palette in the options menu!"
align = 1
valign = 1
autowrap = true
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="UnlockPaletteBox"]
position = Vector2( 136, 96 )
frames = SubResource( 16 )
frame = 2
playing = true

[node name="PaletteFilter" type="TextureRect" parent="."]
material = SubResource( 11 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExampleFilter" type="TextureRect" parent="."]
visible = false
material = SubResource( 17 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 31.0
margin_top = 71.0
margin_right = -32.0
margin_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
